--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "Mountainindex",
-    "short_name": "Mountainindex",
+    "name": "mountainindex",
+    "short_name": "mountainindex",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#2E7D32",
+    "background_color": "#F5F7F4",
+    "theme_color": "#3D5A37",
     "description": "Aplikacja do śledzenia zdobytych szczytów górskich",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
